--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
   <div class="demo">
       <div class="demo-left">
         <a href="home.html">
-          <img src="images/silverstream.png" alt="Logo" class="demo-logo" />
+          <img src="../images/silverstream.png" alt="Logo" class="demo-logo" />
         </a>
       </div>
       <div class="demo-right">
